2006-10-07  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.c: Update comments. Talk about vectors instead of
	strings, and about elements instead of characters.

	* lib/fstrcmp.c: Make generic.
	(OFFSET_MAX): New macro.

	* lib/fstrcmp.c: Modernize the coding style.

	* lib/fstrcmp.c: Include <stdbool.h>. Use bool where appropriate.
	Rename 'minimal' to 'find_minimal'.

	* lib/fstrcmp.c: Make generic.
	(ELEMENT, EQUAL, OFFSET): New macros.

2006-12-17  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.c (diag): Change return type to void.
	(compareseq): Remove verification that the change count is > 1.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* m4/termcap.m4 (gl_TERMCAP_BODY): Also test for the terminfo
	functions.
	* lib/termcap.h (setupterm, tigetnum, tigetflag, tigetstr): New
	declarations.
	* lib/term-ostream.oo.c (xstrdup0) [HAVE_TERMINFO]: Handle (char*)-1
	return value from tigetstr.
	(term_ostream_create) [HAVE_TERMINFO]: Prefer the terminfo API.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c (term_ostream_create): Fix tgetstr argument
	for stream->no_color_video.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c (term_ostream_create): Don't ignore tgetent's
	return value.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* lib/libcroco/cr-style.h (enum CRPositionType): Remove trailing
	comma. Needed for compilation on AIX with xlc.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* modules/libxml (Depends-on): Add stdarg.
	* m4/libxml.m4 (gl_LIBXML): Define VA_COPY, needed for xmlwriter.c.

2006-12-16  Bruno Haible  <bruno@clisp.org>

	* lib/libxml/xmlwriter.c: Include libxml.h first, not after string.h.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp: Add check for GNU sed. Generate the 4 files in the
	source directory, not in the current directory.
	* modules/ostream (Makefile.am): Test for the .h file in the source
	directory, not in the current directory. Augment MAINTAINERCLEANFILES